--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
     <form id="agendaForm">
 
       <label>Nombre del médico</label>
-      <input type="text" name="nombre" required placeholder="Dr. José García">
+      <input type="text" name="nombre" required placeholder="Nombre del medico">
 
       <label>Especialidad</label>
-      <input type="text" name="especialidad" required placeholder="Imagenología">
+      <input type="text" name="especialidad" required placeholder="Especialidad">
 
       <label>Contacto principal (Telegram o Email)</label>
-      <input type="text" name="contacto" required placeholder="@drjosegarcia">
+      <input type="text" name="contacto" required placeholder="Email o Telegram">
 
       <label>Días de atención</label>
       <div class="days">
@@ -128,3 +128,4 @@
 
 </body>
 </html>
+
