--- a/index.html
+++ b/index.html
@@ -125,7 +125,52 @@
 
     </form>
   </div>
+<script>
+  const form = document.getElementById("agendaForm");
+
+  form.addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+    const data = {};
+
+    formData.forEach((value, key) => {
+      if (data[key]) {
+        if (Array.isArray(data[key])) {
+          data[key].push(value);
+        } else {
+          data[key] = [data[key], value];
+        }
+      } else {
+        data[key] = value;
+      }
+    });
+
+    try {
+      const response = await fetch("/api/configurar-agenda", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(data),
+      });
+
+      const result = await response.json();
+
+      if (result.ok) {
+        alert("✅ Tu agenda fue recibida correctamente.");
+        form.reset();
+      } else {
+        alert("⚠️ Hubo un problema. Intenta nuevamente.");
+      }
+    } catch (error) {
+      alert("❌ Error de conexión con el servidor.");
+    }
+  });
+</script>
 
 </body>
 </html>
+
+
 
