--- a/index.html
+++ b/index.html
@@ -2,175 +2,139 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Configurar agenda | Nocodia</title>
+  <title>Nocodia · Configurar Agenda</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f7f7f7;
+      background: #f6f7f9;
       padding: 20px;
     }
-    .container {
-      max-width: 520px;
-      background: #ffffff;
-      padding: 24px;
-      border-radius: 8px;
+    form {
+      background: white;
+      max-width: 600px;
       margin: auto;
+      padding: 20px;
+      border-radius: 8px;
     }
     h1 {
-      font-size: 22px;
-      margin-bottom: 8px;
-    }
-    p {
-      font-size: 14px;
-      color: #555;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
     label {
       display: block;
-      margin-top: 14px;
+      margin-top: 12px;
       font-weight: bold;
-      font-size: 14px;
     }
     input, select {
       width: 100%;
       padding: 8px;
-      margin-top: 6px;
+      margin-top: 4px;
     }
-    .days {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 6px;
-    }
-    .days label {
+    .dias label {
       font-weight: normal;
+      display: block;
     }
     button {
-      margin-top: 24px;
-      width: 100%;
+      margin-top: 20px;
       padding: 12px;
+      width: 100%;
       background: #111827;
-      color: #fff;
+      color: white;
       border: none;
       border-radius: 6px;
       font-size: 16px;
       cursor: pointer;
     }
-    button:hover {
-      background: #000;
-    }
-    .note {
-      font-size: 12px;
-      color: #777;
-      margin-top: 12px;
-    }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h1>Configura tu agenda de atención</h1>
-    <p>Define tus horarios una sola vez. Nosotros nos encargamos del resto.</p>
+<form id="agenda-form">
+  <h1>Configurar agenda médica</h1>
 
-    <form id="agendaForm">
+  <label>Nombre del médico</label>
+  <input id="nombre_medico" required />
 
-      <label>Nombre del médico</label>
-      <input type="text" name="nombre" required placeholder="Nombre del medico">
+  <label>Especialidad</label>
+  <input id="especialidad" required />
 
-      <label>Especialidad</label>
-      <input type="text" name="especialidad" required placeholder="Especialidad">
+  <label>Contacto (opcional)</label>
+  <input id="contacto" />
 
-      <label>Contacto principal (Telegram o Email)</label>
-      <input type="text" name="contacto" required placeholder="Email o Telegram">
-
-      <label>Días de atención</label>
-      <div class="days">
-        <label><input type="checkbox" name="dias" value="Lunes"> Lunes</label>
-        <label><input type="checkbox" name="dias" value="Martes"> Martes</label>
-        <label><input type="checkbox" name="dias" value="Miércoles"> Miércoles</label>
-        <label><input type="checkbox" name="dias" value="Jueves"> Jueves</label>
-        <label><input type="checkbox" name="dias" value="Viernes"> Viernes</label>
-        <label><input type="checkbox" name="dias" value="Sábado"> Sábado</label>
-        <label><input type="checkbox" name="dias" value="Domingo"> Domingo</label>
-      </div>
-
-      <label>Hora de inicio</label>
-      <input type="time" name="hora_inicio" required>
-
-      <label>Hora de fin</label>
-      <input type="time" name="hora_fin" required>
-
-      <label>Duración de cada cita</label>
-      <select name="duracion">
-        <option value="15">15 minutos</option>
-        <option value="20">20 minutos</option>
-        <option value="30" selected>30 minutos</option>
-        <option value="45">45 minutos</option>
-        <option value="60">60 minutos</option>
-      </select>
-
-      <label>Abrir agenda por adelantado</label>
-      <select name="dias_adelanto">
-        <option value="7">7 días</option>
-        <option value="14" selected>14 días</option>
-        <option value="30">30 días</option>
-      </select>
-
-      <button type="submit">Guardar y activar agenda</button>
-
-      <div class="note">
-        Podrás cambiar tus horarios fácilmente desde Telegram cuando lo necesites.
-      </div>
-
-    </form>
+  <label>Días de atención</label>
+  <div class="dias">
+    <label><input type="checkbox" name="dias" value="Lunes" /> Lunes</label>
+    <label><input type="checkbox" name="dias" value="Martes" /> Martes</label>
+    <label><input type="checkbox" name="dias" value="Miércoles" /> Miércoles</label>
+    <label><input type="checkbox" name="dias" value="Jueves" /> Jueves</label>
+    <label><input type="checkbox" name="dias" value="Viernes" /> Viernes</label>
+    <label><input type="checkbox" name="dias" value="Sábado" /> Sábado</label>
   </div>
-<script>
-  const form = document.getElementById("agendaForm");
 
-  form.addEventListener("submit", async function (e) {
+  <label>Hora inicio</label>
+  <input id="hora_inicio" type="time" required />
+
+  <label>Hora fin</label>
+  <input id="hora_fin" type="time" required />
+
+  <label>Duración de cada cita (minutos)</label>
+  <select id="duracion_cita">
+    <option value="15">15</option>
+    <option value="20">20</option>
+    <option value="30" selected>30</option>
+    <option value="45">45</option>
+    <option value="60">60</option>
+  </select>
+
+  <label>Días máximos de adelanto</label>
+  <select id="dias_adelanto">
+    <option value="7">7</option>
+    <option value="14">14</option>
+    <option value="30" selected>30</option>
+  </select>
+
+  <button type="submit">Guardar y activar agenda</button>
+</form>
+
+<script>
+  const form = document.getElementById("agenda-form");
+
+  form.addEventListener("submit", async (e) => {
     e.preventDefault();
 
-    const formData = new FormData(form);
-    const data = {};
+    const diasSeleccionados = Array.from(
+      document.querySelectorAll('input[name="dias"]:checked')
+    ).map((el) => el.value);
 
-    formData.forEach((value, key) => {
-      if (data[key]) {
-        if (Array.isArray(data[key])) {
-          data[key].push(value);
-        } else {
-          data[key] = [data[key], value];
-        }
-      } else {
-        data[key] = value;
-      }
+    const payload = {
+      nombre_medico: document.getElementById("nombre_medico").value,
+      especialidad: document.getElementById("especialidad").value,
+      contacto: document.getElementById("contacto").value,
+      dias_atencion: diasSeleccionados,
+      hora_inicio: document.getElementById("hora_inicio").value,
+      hora_fin: document.getElementById("hora_fin").value,
+      duracion_cita: parseInt(document.getElementById("duracion_cita").value),
+      dias_adelanto: parseInt(document.getElementById("dias_adelanto").value),
+    };
+
+    console.log("ENVIANDO:", payload);
+
+    const res = await fetch("/api/configurar-agenda", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload),
     });
 
-    try {
-      const response = await fetch("/api/configurar-agenda", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify(data),
-      });
+    const data = await res.json();
 
-      const result = await response.json();
-
-      if (result.ok) {
-        alert("✅ Tu agenda fue recibida correctamente.");
-        form.reset();
-      } else {
-        alert("⚠️ Hubo un problema. Intenta nuevamente.");
-      }
-    } catch (error) {
-      alert("❌ Error de conexión con el servidor.");
+    if (!res.ok) {
+      alert(data.error || "Error al guardar");
+      return;
     }
+
+    alert("Agenda configurada correctamente");
   });
 </script>
 
 </body>
 </html>
-
-
-
