--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
   </div>
 
   <script>
-    const WORKER_URL = "https://nocodia-agenda-worker-jraul-garcia.workers.dev";
+    const WORKER_URL = "https://nocodia-agenda-worker.jraul-garcia.workers.dev/configurar-agenda";
+
 
     document
       .getElementById("agenda-form")
@@ -158,3 +159,4 @@
   </script>
 </body>
 </html>
+
