--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
         <label><input type="checkbox" name="dias" value="jueves"> Jueves</label>
         <label><input type="checkbox" name="dias" value="viernes"> Viernes</label>
         <label><input type="checkbox" name="dias" value="sabado"> Sábado</label>
+        <label><input type="checkbox" name="dias" value="domingo"> Domingo</label>
+
       </div>
 
       <label>Hora de inicio</label>
@@ -159,4 +161,5 @@
   </script>
 </body>
 </html>
+
 
