--- a/index.html
+++ b/index.html
@@ -61,6 +61,30 @@
       font-size: 13px;
       color: #555;
     }
+
+    /* 🔹 Estilos del botón de agenda pública */
+    .public-link-box{
+      margin-top:20px;
+      text-align:center;
+    }
+    .public-link{
+      display:inline-block;
+      padding:10px 18px;
+      border-radius:8px;
+      background:#2563eb;
+      color:#fff;
+      text-decoration:none;
+      font-weight:bold;
+      font-size:14px;
+    }
+    .public-link:hover{
+      background:#1d4ed8;
+    }
+    .small-note{
+      margin-top:6px;
+      font-size:12px;
+      color:#6b7280;
+    }
   </style>
 </head>
 
@@ -88,7 +112,6 @@
         <label><input type="checkbox" name="dias" value="viernes"> Viernes</label>
         <label><input type="checkbox" name="dias" value="sabado"> Sábado</label>
         <label><input type="checkbox" name="dias" value="domingo"> Domingo</label>
-
       </div>
 
       <label>Hora de inicio</label>
@@ -112,11 +135,22 @@
       </div>
 
     </form>
+
+    <!-- 🔹 BOTÓN AGENDA PÚBLICA -->
+    <div class="public-link-box">
+      <a class="public-link" href="agenda.html" target="_blank">
+        Ver mi agenda pública
+      </a>
+      <p class="small-note">
+        Comparte este enlace con tus pacientes para que reserven sus citas.
+      </p>
+    </div>
+
   </div>
 
   <script>
+    // 🔹 TU MISMO WORKER — NO LO TOCO
     const WORKER_URL = "https://nocodia-agenda-worker.jraul-garcia.workers.dev/configurar-agenda";
-
 
     document
       .getElementById("agenda-form")
@@ -161,5 +195,3 @@
   </script>
 </body>
 </html>
-
-
