--- a/index.html
+++ b/index.html
@@ -161,13 +161,16 @@
         <label>Duración de cada cita (minutos)</label>
         <select id="duracion">
           <option value="15">15</option>
+          <option value="20">20</option>
           <option value="30" selected>30</option>
           <option value="45">45</option>
           <option value="60">60</option>
         </select>
-
         <label>Costo de consulta (USD)</label>
-        <input id="precio" type="number" step="0.01" value="35" required />
+<input id="precio" type="number" step="0.01" value="35" required />
+
+        
+
 
         <button type="submit" id="btnContinue">Continuar</button>
 
@@ -286,3 +289,4 @@
   </script>
 </body>
 </html>
+
