--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       }
 
       const CLIENT_ID = "579482042972-tb17e0888ujg6oh920au3r33sv5kn2j9.apps.googleusercontent.com";
-      const REDIRECT_URI = "https://nocodia-agenda-q23ght6wb-nocodia-projects.vercel.app/oauth-callback.html";
+      const REDIRECT_URI = "https://nocodia-agenda.vercel.app/oauth-callback.html";
       const SCOPE = "https://www.googleapis.com/auth/calendar https://www.googleapis.com/auth/userinfo.email";
 
       const authUrl = `https://accounts.google.com/o/oauth2/v2/auth?` +
@@ -289,4 +289,5 @@
   </script>
 </body>
 </html>
+
 
