--- a/oauth-callback.html
+++ b/oauth-callback.html
@@ -55,7 +55,6 @@
                     return;
                 }
 
-                // Recuperar datos del localStorage
                 const doctorData = localStorage.getItem('doctorData');
                 
                 if (!doctorData) {
@@ -66,7 +65,6 @@
 
                 const data = JSON.parse(doctorData);
 
-                // Llamar al worker
                 const response = await fetch('https://nocodia-agenda-worker-v2.jraul-garcia.workers.dev/register-doctor', {
                     method: 'POST',
                     headers: {
@@ -77,10 +75,9 @@
                         redirect_uri: 'https://nocodia-agenda.vercel.app/oauth-callback.html',
                         name: data.name,
                         specialty: data.specialty,
-                        phone: data.phone,
                         address: data.address,
                         office_hours: data.office_hours,
-                        consultation_price: data.consultation_price
+                        consultation_price: parseFloat(data.consultation_price)
                     })
                 });
 
