--- a/oauth-callback.html
+++ b/oauth-callback.html
@@ -77,7 +77,8 @@
                         specialty: data.specialty,
                         address: data.address,
                         office_hours: data.office_hours,
-                        consultation_price: parseFloat(data.consultation_price)
+                        consultation_price: parseFloat(data.consultation_price),
+                        slot_duration: parseInt(data.slot_duration)
                     })
                 });
 
