--- a/oauth-callback.html
+++ b/oauth-callback.html
@@ -78,7 +78,8 @@
                         address: data.address,
                         office_hours: data.office_hours,
                         consultation_price: parseFloat(data.consultation_price),
-                        slot_duration: parseInt(data.slot_duration)
+                        slot_duration: parseInt(data.slot_duration),
+                        contact_phone: data.contact_phone || null
                     })
                 });
 
