--- a/oauth-callback.html
+++ b/oauth-callback.html
@@ -20,13 +20,14 @@
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+            max-width: 400px;
         }
         .spinner {
             border: 4px solid #f3f3f3;
             border-top: 4px solid #667eea;
             border-radius: 50%;
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             animation: spin 1s linear infinite;
             margin: 20px auto;
         }
@@ -34,17 +35,37 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        .status {
+            font-size: 14px;
+            color: #666;
+            margin-top: 20px;
+            padding: 15px;
+            background: #f5f5f5;
+            border-radius: 8px;
+            line-height: 1.6;
+        }
+        .progress-text {
+            color: #667eea;
+            font-weight: 600;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="spinner"></div>
-        <h2>Conectando con Google Calendar...</h2>
-        <p>Por favor espera un momento</p>
+        <h2>Configurando tu asistente...</h2>
+        <p class="progress-text" id="progressText">Conectando con Google Calendar...</p>
+        <div class="status">
+            <p>⏱️ Este proceso puede tomar hasta 30 segundos.</p>
+            <p>Por favor no cierres esta ventana.</p>
+        </div>
     </div>
 
     <script>
         (async function() {
+            const progressText = document.getElementById('progressText');
+            
             try {
                 const urlParams = new URLSearchParams(window.location.search);
                 const code = urlParams.get('code');
@@ -65,6 +86,9 @@
 
                 const data = JSON.parse(doctorData);
 
+                // Actualizar estado
+                progressText.textContent = 'Verificando credenciales de Google...';
+
                 const response = await fetch('https://nocodia-agenda-worker-v2.jraul-garcia.workers.dev/register-doctor', {
                     method: 'POST',
                     headers: {
@@ -83,13 +107,19 @@
                     })
                 });
 
+                progressText.textContent = 'Guardando configuración...';
+
                 const result = await response.json();
 
                 if (result.success) {
+                    progressText.textContent = '¡Listo! Redirigiendo...';
                     localStorage.setItem('provider_code', result.provider_code);
                     localStorage.setItem('doctor_id', result.doctor_id);
                     localStorage.removeItem('doctorData');
-                    window.location.href = '/?success=true';
+                    
+                    setTimeout(() => {
+                        window.location.href = '/?success=true';
+                    }, 500);
                 } else {
                     alert('Error: ' + (result.error || 'No se pudo completar el registro'));
                     window.location.href = '/';
